; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/sn/pci/pcibr/extr_pcibr_ate.c_free_ate_resource.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/sn/pci/pcibr/extr_pcibr_ate.c_free_ate_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ate_resource = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ate_resource*, i32)* @free_ate_resource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_ate_resource(%struct.ate_resource* %0, i32 %1) #0 {
  %3 = alloca %struct.ate_resource*, align 8
  %4 = alloca i32, align 4
  store %struct.ate_resource* %0, %struct.ate_resource** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.ate_resource*, %struct.ate_resource** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = load %struct.ate_resource*, %struct.ate_resource** %3, align 8
  %8 = getelementptr inbounds %struct.ate_resource, %struct.ate_resource* %7, i32 0, i32 1
  %9 = load i32*, i32** %8, align 8
  %10 = load i32, i32* %4, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %9, i64 %11
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @mark_ate(%struct.ate_resource* %5, i32 %6, i32 %13, i32 0)
  %15 = load %struct.ate_resource*, %struct.ate_resource** %3, align 8
  %16 = getelementptr inbounds %struct.ate_resource, %struct.ate_resource* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* %4, align 4
  %19 = icmp sgt i32 %17, %18
  br i1 %19, label %25, label %20

20:                                               ; preds = %2
  %21 = load %struct.ate_resource*, %struct.ate_resource** %3, align 8
  %22 = getelementptr inbounds %struct.ate_resource, %struct.ate_resource* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %20, %2
  %26 = load i32, i32* %4, align 4
  %27 = load %struct.ate_resource*, %struct.ate_resource** %3, align 8
  %28 = getelementptr inbounds %struct.ate_resource, %struct.ate_resource* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 8
  br label %29

29:                                               ; preds = %25, %20
  ret void
}

declare dso_local i32 @mark_ate(%struct.ate_resource*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
